Fix collapse moves other elements

--- a/src/views/notesDashboard/styles.scss
+++ b/src/views/notesDashboard/styles.scss
@@ -1,7 +1,4 @@
 @import "../../components/layout/variables";
-.notesHeader {
-  margin-top: -200px;
-}
 .collapseWrapper {
   margin-top: 50px;
   &__buttons {
